--- a/registerPatient.html
+++ b/registerPatient.html
@@ -46,13 +46,9 @@
         <section id="patientRegistration" class="divider">
           <h3>Register patient</h3>
             <form class="row g-3 mt-2">
-                <div class="col-md-6">
+                <div class="col">
                   <label for="patientName" class="form-label">Name</label>
                   <input type="text" class="form-control" id="validationDefault01" required>
-                </div>
-                <div class="col-md-6">
-                  <label for="validationDefault05" class="form-label">Age</label>
-                  <input type="number" class="form-control" id="validationDefault05" required>
                 </div>
     
                 <div class="col-12">
