--- a/seeSample.html
+++ b/seeSample.html
@@ -60,8 +60,8 @@
                 </div>
           
                 <div class="col-md-6">
-                  <label for="healthCenter" class="form-label">Health center</label>
-                  <select class="form-select" id="healthCenter" required>
+                  <label for="helthCenter" class="form-label">Health center</label>
+                  <select class="form-select" id="helthCenter" required>
                     <option selected disabled value="">Choose</option>
                     <option>VHIR Drassanes</option>
                     <option>Other</option>
@@ -125,14 +125,12 @@
   
           const patientId = document.getElementById('patientId').value;
           const sampleType = document.getElementById('sampleType').value;
-          const healthCenter = document.getElementById('healthCenter').value;
-          const date = document.getElementById('date').value;
+          const helthCenter = document.getElementById('helthCenter').value;
 
           const sampleData = {
               patient_id: patientId,
               sample_type: sampleType,
-              helth_center: healthCenter,
-              created_at: date
+              helth_center: helthCenter
           };
 
           try {
