--- a/seeSample.html
+++ b/seeSample.html
@@ -74,7 +74,7 @@
               </form>
         </section>
         
-        <section id="patientList" class="divider">
+        <section id="sampleList" class="divider">
           <h3>Sample list</h3>
           <div class="container mt-4">
             <!-- Campo de busca -->
@@ -128,7 +128,7 @@
           const helthCenter = document.getElementById('helthCenter').value;
 
           const sampleData = {
-              patient_id: patientId,
+              user_id: patientId,
               sample_type: sampleType,
               helth_center: helthCenter
           };
