--- a/addImages.html
+++ b/addImages.html
@@ -31,10 +31,10 @@
                         <a class="nav-link active" href="addImages.html">Images</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" href="">Network</a>
+                      <a class="nav-link active" href="registerNetwork.html">Network</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link active" href="">Classification</a>
+                      <a class="nav-link active" href="makeClassification.html">Classification</a>
                     </li>
                 </ul>
               </div>
