--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a class="nav-link active" href="registerNetwork.html">Network</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="">Classification</a>
+                        <a class="nav-link active" href="makeClassification.html">Classification</a>
                     </li>
                 </ul>
               </div>
