--- a/makeClassification.html
+++ b/makeClassification.html
@@ -43,7 +43,7 @@
     </header>
 
     <main class="my_container">
-        <section id="patientRegistration" class="divider">
+        <section id="classificationSection" class="divider">
             <h3>Make classification</h3>
             <form id="classificationForm" class="row g-3 mt-2">
                 <div class="col-md-6">
@@ -65,6 +65,40 @@
                 </div>
               </form>
         </section>
+
+        <!-- Seção de listagem de classificações -->
+        <section id="classificationListSection" class="divider">
+            <h3>Classification list</h3>
+            <div class="container mt-4">
+                <!-- Campo de busca -->
+                <div class="row mb-2">
+                    <div class="col-6">
+                        <input type="text" id="classificationSearch" class="form-control" placeholder="Search for a classification...">
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-12">
+                        <div class="table-responsive">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th>Id</th>
+                                        <th>Patient Id</th>
+                                        <th>Network Id</th>
+                                        <th>Image Id</th>
+                                        <th>Result</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="classificationListBody">
+                                    <!-- Renderizar a lista de classificações -->
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>  
 
     <script>
@@ -75,7 +109,7 @@
         const networkId = document.getElementById('networkId').value;
         const imageId = document.getElementById('imageId').value;
 
-        const networkData = {
+        const classificationData = {
           user_id: patientId,
           network_id: networkId,
           image_id: imageId
@@ -87,7 +121,7 @@
                   headers: {
                     'Content-Type': 'application/json'
                   },
-                  body: JSON.stringify(networkData),
+                  body: JSON.stringify(classificationData),
               });
       
               if (!response.ok) {
@@ -97,11 +131,52 @@
               const result = await response.json();
               alert('Classification uploaded successfully!');
               console.log(result);
+              fetchClassifications(); // Atualiza a lista após a classificação
           } catch (error) {
               console.error('There was a problem with the fetch operation:', error);
               alert('Failed to upload classification.');
           }
-      })
+      });
+
+      async function fetchClassifications() {
+          const patientId = document.getElementById('patientId').value;
+          const networkId = document.getElementById('networkId').value;
+
+          try {
+              const response = await fetch(`http://localhost:8080/v1/users/${patientId}/networks/${networkId}/images`, {
+                  method: 'GET',
+              });
+
+              if (!response.ok) {
+                  throw new Error(`Failed to fetch classifications: ${response.status} ${response.statusText}`);
+              }
+
+              const classifications = await response.json();
+              const classificationListBody = document.getElementById('classificationListBody');
+
+              // Limpa a lista de classificações antes de renderizar
+              classificationListBody.innerHTML = '';
+
+              // Renderiza cada classificação na tabela
+              classifications.forEach((classification, index) => {
+                  const row = document.createElement('tr');
+                  row.innerHTML = `
+                      <td>${classification.id}</td>
+                      <td>${classification.user_id}</td>
+                      <td>${classification.network_id}</td>
+                      <td>${classification.image_id}</td>
+                      <td>${classification.result}</td>
+                  `;
+                  classificationListBody.appendChild(row);
+              });
+          } catch (error) {
+              console.error('There was a problem with the fetch operation:', error);
+              alert('Failed to load classification list.');
+          }
+      }
+
+      // Chama a função para buscar e renderizar as classificações assim que a página carregar
+      window.onload = fetchClassifications;
     </script>
 
     <!--Poppers do Bootstrap-->
