--- a/registerPatient.html
+++ b/registerPatient.html
@@ -60,7 +60,6 @@
         <section id="patientList" class="divider">
           <h3>Patient List</h3>
           <div class="container mt-4">
-            <!-- Campo de busca -->
             <div class="row mb-2">
               <div class="col-6 ">
                 <input type="text" id="patientSearch" class="form-control" placeholder="Search for a patient...">
@@ -73,27 +72,15 @@
                       <table class="table table-striped">
                           <thead>
                               <tr>
-                                  <th>#</th>
-                                  <th>First Name</th>
-                                  <th>Age</th>
+                                  <th>Id</th>
+                                  <th>Name</th>
                               </tr>
                           </thead>
-                          <tbody id="patientList">
+                          <tbody id="patientListBody">
                               <!-- Renderizar a lista de pacientes -->
                           </tbody>
                       </table>
                   </div>
-              </div>
-            </div>
-          
-            <!-- Paginação -->
-            <div class="row">
-              <div class="col-12">
-                <nav>
-                  <ul class="pagination justify-content-center">
-                    <!-- Renderizar os links de paginação -->
-                  </ul>
-                </nav>
               </div>
             </div>
           </div>
@@ -102,14 +89,14 @@
 
     <script>
       document.getElementById('patientForm').addEventListener('submit', async function(event) {
-        event.preventDefault(); //Impede o envio padrão do formulário
+        event.preventDefault(); // Impede o envio padrão do formulário
 
         const patientName = document.getElementById('patientName').value;
 
         const patientData = {
           name: patientName,
           document: 1
-        }
+        };
 
         try {
           const response = await fetch('http://localhost:8080/v1/users', {
@@ -118,7 +105,7 @@
               'Content-Type': 'application/json'
             },
             body: JSON.stringify(patientData),
-          })
+          });
 
           if (!response.ok) {
             throw new Error('Network response was not ok.');
@@ -126,12 +113,42 @@
 
           const result = await response.json();
           alert('User registered successfully!');
-          console.log(result);
-        } catch(error) {
+          fetchPatients(); // Atualiza a lista após o registro
+        } catch (error) {
           console.error('There was a problem with the fetch operation:', error);
           alert('Failed to register user.');
         }
       });
+
+      async function fetchPatients() {
+        try {
+          const response = await fetch('http://localhost:8080/v1/users'); // Endpoint do back-end
+          if (!response.ok) {
+            throw new Error('Failed to fetch patients');
+          }
+
+          const patients = await response.json();
+          const patientListBody = document.getElementById('patientListBody');
+
+          // Limpa a lista de pacientes antes de renderizar
+          patientListBody.innerHTML = '';
+
+          // Renderiza cada paciente na tabela
+          patients.forEach((patient, index) => {
+            const row = document.createElement('tr');
+            row.innerHTML = `
+              <td>${patient.id}</td>
+              <td>${patient.name}</td>
+            `;
+            patientListBody.appendChild(row);
+          });
+        } catch (error) {
+          console.error('Error fetching patients:', error);
+        }
+      }
+
+      // Chama a função para buscar e renderizar os pacientes assim que a página carregar
+      window.onload = fetchPatients;
     </script>
 
     <!--Poppers do Bootstrap-->
